Remove wrapper div causing layout issues.

--- a/assets/sass/components/adminbar/_googlesitekit-adminbar.scss
+++ b/assets/sass/components/adminbar/_googlesitekit-adminbar.scss
@@ -116,4 +116,9 @@
 			pointer-events: auto;
 		}
 	}
+
+	// Hides Widgets in No Data state
+	.googlesitekit-plugin .googlesitekit-adminbar .mdc-layout-grid__inner .googlesitekit-hidden {
+		display: none;
+	}
 }
